--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
-  "name": "Burger",
+  "name": "burger",
   "version": "1.0.0",
-  "description": "Burger logger with MySQL, Node, Express, Handlebars and a homemade ORM",
+  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pyromaniac14281/burgertime.git"
   },
-  "author": "Geoff Goodwin",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/pyromaniac14281/burgertime/issues"
   },
-  "homepage": "https://github.com/pyromaniac14281/burgertime#readme",
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
-    "mysql": "^2.15.0"
-  }
+  "homepage": "https://github.com/pyromaniac14281/burgertime#readme"
+}
